# fashion-datalake

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
properties/: spider_config.yml
src/fashion_datalake/scraping/scraping/: items.py  settings.py
src/fashion_datalake/scraping/scraping/spiders/: zalando_spider.py
src/fashion_datalake/utils/: constants.py
test/: fashion_datalake_test.py
test/test_assets/: zalando_catalogue_first_page.html  zalando_catalogue_last_page.html  zalando_item_page.html
